# beeai-platform-agent-starter

./: agent.yaml  pyproject.toml  run.py  travel_advisor.py
src/beeai_agents/: configuration.py  react_agent.py  react_server.py  server.py
